--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /* font-family: gilroy; */
     color: #fff;
 }
 
@@ -195,4 +196,34 @@ nav button svg {
     height: 100vh;
     width: 100%;
     background: #111;
+    position: relative;
+    padding: 0vw 10.5vw;
+    padding-bottom: 8vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #333;
+}
+#page2-left{
+    height: 100%;
+    width: 40%;
+    /* background-color: #333; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 3vw 0;
+}
+#page2-left p{
+    font-size: 0.8vw;
+}
+#page2-left h5{
+    width: 75%;
+    font-weight: 200;
+    font-size: 1.1vw;
+}
+#page2-right{
+    height: 100%;
+    width: 50%;
+    /* background-color: #333; */
 }
