--- a/style.css
+++ b/style.css
@@ -246,3 +246,62 @@ nav button svg {
     position: absolute;
     scale: 0;
 }
+
+
+#page3{
+    height: 100vh;
+    width: 100%;
+    background-color: #111;
+    position: relative;
+    background-image: url(https://lazarev.kiev.ua/la24/reel-cover.webp);
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.page3-center{
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 1vw;
+}
+.page3-center .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3.3vw;
+    border-radius: 50%;
+    background-color: #fff;
+}
+.page3-center .icon i{
+    color: black;
+    font-size: 2.8vw;
+}
+.page3-center h5{
+    font-size: 0.8vw;
+    background-color: #fff;
+    color: black;
+    border-radius: 50px;
+    padding: 12px 26px 10px 26px;
+    margin-top: 0.5vw;
+    font-weight: 700;
+    opacity: 0;
+    transform: translateY(16%);
+    transition: all ease 0.5s;
+    text-transform: uppercase;
+}
+.page3-center:hover h5{
+    opacity: 1;
+    transform: translateY(0%);
+}
+#page3 video{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    object-fit: cover;
+    transform: scaleX(0.7) scaleY(0);
+    opacity: 0;
+    border-radius: 30px;
+    z-index: 9999;
+}
