--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ nav button svg {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 #page1 h1{
@@ -486,7 +487,144 @@ summary::marker{
 }
 
 #page6{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background: #fff;
+    padding: 8vh 10vw;
+}
+#page6>h1{
+    font-size: 5.5vw;
+    color: #000;
+    /* background-color: red; */
+    padding-left: 23vw;
+    padding-right: 5vw;
+    line-height: 5.8vw;
+    padding-bottom: 10vw;
+    border-bottom: 1px solid #dadada;
+}
+#page6-content{
+    /* background-color: red; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+#page6 #right-6{
+    width: 70%;
+}
+#page6 #right-6 p{
+    font-size: 1.5vw;
+    color: #000;
+    margin-bottom: 5vh;
+    width: 80%;
+}
+#blue-btn{
+    background-color: #4f5bff;
+    width: 15vw;
+    height: 3.5vw;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#blue-btn h4{
+    position: absolute;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 0.85vw;
+}
+#blue-btn h4 i{
+    font-size: 1.1vw;
+    font-weight: 100;
+    margin-left: 0.5vw;
+}
+#page6-bottom{
+    height: 44vh;
+    width: 100%;
+    /* background-color: red; */
+    border-top: 1px solid #dadada;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    /* background-color: gray; */
+}
+#btm6-part1{
+    border-right: 1px solid #dadada;
+    width: 30%;
+    /* background-color: red; */
+    height: 100%;
+}
+#btm6-part2{
+    border-right: 1px solid #dadada;
+    width: 28%;
+    /* background-color: red; */
+    height: 100%;
+}
+#btm6-part3{
+    border-right: 1px solid #dadada;
+    width: 15%;
+    /* background-color: red; */
+    height: 100%;
+}
+#btm6-part4{
+    border-right: 1px solid #dadada;
+    width: 15%;
+    /* background-color: red; */
+    height: 100%;
+}
+#btm6-part5{
+    width: 15%;
+    /* background-color: red; */
+    height: 100%;
+}
+.btm6-parts{
+    padding: 3vh 0.6vw;
+}
+.btm6-parts h5{
+    color: black;
+    font-weight: 500;
+    font-size: 0.9vw;
+    margin-bottom: 4vh;
+}
+.btm6-parts h4{
+    background-color: #111;
+    width: 75%;
+    padding: 5px 10px;
+    margin-bottom: 0.3vh;
+    border-radius: 50px;
+    font-size: 0.85vw;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+}
+.btm6-parts h4 span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #333;
+    width: 1.5vw;
+    height: 1.5vw;
+    padding: 0.5vw;
+    border-radius: 50%;
+    margin-right: 1vw;
+}
+
+#btm6-part2 h4:nth-child(3){
+    transform: translateX(10%)
+}
+#btm6-part2 h4:nth-child(4){
+    transform: translateX(20%)
+}
+#btm6-part2 h4:nth-child(5){
+    transform: translateX(30%)
+}
+#btm6-part2 h4:nth-child(6){
+    transform: translateX(40%)
+}
+#btm6-part2 h4:nth-child(7){
+    transform: translateX(50%)
+}
+
+#page7{
+    height: 100vh;
+    background-color: #111;
 }
